--- a/Predictions/readme
+++ b/Predictions/readme
@@ -1,1 +1,1 @@
-This file contains the predictions obtained from the models for the compounds in the 
+This file contains the predictions obtained from the models for the compounds in the Genesis library.
